components/nonmem-parser/src/snapshots/nonmem_parser__parser__tests__can_parse_mod_files@sim_too_many_sources.mod.snap
---
source: components/nonmem-parser/src/parser.rs
expression: cst.debug_tree(&tokens)
input_file: components/nonmem-parser/test_data/sim_too_many_sources.mod
---
Root
  Problem
    ControlRecord "$PROBLEM"
    Whitespace " "
    Symbol "too"
    Whitespace " "
    Symbol "many"
    Whitespace " "
    Symbol "sim"
    Whitespace " "
    Symbol "sources"
  Newline "\n"
  Input
    ControlRecord "$INPUT"
    Whitespace " "
    InputColumn
      Symbol "ID"
      Whitespace " "
    InputColumn
      Symbol "TIME"
      Whitespace " "
    InputColumn
      Symbol "DV"
      Newline "\n"
  Data
    ControlRecord "$DATA"
    Whitespace " "
    Symbol "data.csv"
    Whitespace " "
    KeyValue
      Symbol "IGNORE"
      Equals "="
      Symbol "@"
  Newline "\n"
  Pred
    ControlRecord "$PRED"
    Newline "\n"
    Whitespace "  "
    Assignment
      Ident "Y"
      Whitespace " "
      Equals "="
      Whitespace " "
      BinaryExpr
        FunctionCall
          Ident "THETA"
          LeftParen "("
          ArgList
            Int "1"
          RightParen ")"
        Whitespace " "
        Plus "+"
        Whitespace " "
        FunctionCall
          Ident "EPS"
          LeftParen "("
          ArgList
            Int "1"
          RightParen ")"
  Newline "\n"
  Theta
    ControlRecord "$THETA"
    Whitespace " "
    Param
      Int "1"
    Newline "\n"
  Sigma
    ControlRecord "$SIGMA"
    Whitespace " "
    Param
      Int "1"
    Newline "\n"
  Simulation
    ControlRecord "$SIM"
    Whitespace " "
    Flag
      LeftParen "("
      Int "804831"
      Whitespace " "
      Int "123"
      RightParen ")"
    Whitespace " "
    Flag
      LeftParen "("
      Int "1234"
      Whitespace " "
      Int "4321"
      RightParen ")"
    Whitespace " "
    Flag
      LeftParen "("
      Int "804"
      Whitespace " "
      Int "831"
      RightParen ")"
    Whitespace " "
    Flag
      LeftParen "("
      Int "621"
      RightParen ")"
    Whitespace " "
    Flag
      LeftParen "("
      Int "0217"
      Whitespace " "
      Int "123"
      RightParen ")"
    Whitespace " "
    KeyValue
      Symbol "CLOCKSEED"
      Equals "="
      Int "1"
    Whitespace " "
    Flag
      Symbol "ONLYSIM"
      Whitespace " "
    KeyValue
      Symbol "SUBPROBLEMS"
      Equals "="
      Int "1"
  Newline "\n"
