components/nonmem-parser/src/snapshots/nonmem_parser__parser__tests__parse_errors@data_accept_and_ignore.mod.snap
---
source: components/nonmem-parser/src/parser.rs
expression: "rendered.join(\"\\n\")"
input_file: components/nonmem-parser/test_data/errors/data_accept_and_ignore.mod
---
error: ACCEPT and IGNORE cannot both be specified in $DATA
 --> data_accept_and_ignore.mod:2:33
  |
2 | $DATA data.csv IGNORE=(ID.EQ.2) ACCEPT=(ID.EQ.1)
  |                                 ^^^^^^
