components/nonmem-parser/src/snapshots/nonmem_parser__parser__tests__parse_errors@data_missing_filename.mod.snap
---
source: components/nonmem-parser/src/parser.rs
expression: "diag.render(display_path, &input)"
input_file: components/nonmem-parser/test_data/errors/data_missing_filename.mod
---
error: expected a filename after $DATA
 --> data_missing_filename.mod:3:1
  |
3 | 
  | ^
